[workspace]
members = [
    "nullables/output_tracker",
    "nullables/fs",
    "nullables/tcp",
    "nullables/lmdb",
    "nullables/http_client",
    "nullables/clock",
    "nullables/random",
    "core",
	"stats",
	"work",
    "messages",
    "network",
    "rpc_messages",
    "rpc_client",
    "rpc_server",
	"websocket_server",
    "store_lmdb",
    "ledger",
    "node",
    "main",
    "tools/xtask",
    "tools/test_helpers", 
	"tools/signature-checker", 
	"tools/insight", 
    "daemon", 
    "nullables/console", 
    "websocket_messages", 
	"tools/record-rep-weights"
	, "tools/nanospam", "network_protocol"]

resolver = "2"
