[workspace]
members = [
	"nullables/output_tracker",
	"nullables/fs",
	"nullables/tcp",
	"nullables/lmdb",
	"nullables/http_client",
	"nullables/clock",
	"nullables/random",
	"nullables/console", 
	"nullables/tracing_subscriber",
	"nullables/env", 
	"core",
	"stats",
	"work",
	"messages",
	"network",
	"rpc_messages",
	"rpc_client",
	"rpc_server",
	"websocket_messages", 
	"websocket_client", 
	"websocket_server",
	"store_lmdb",
	"ledger",
	"node",
	"main",
	"daemon", 
	"network_protocol", 
	"tools/record-rep-weights", 
	"tools/nanospam", 
	"tools/xtask",
	"tools/test_helpers", 
	"tools/signature-checker", 
	"tools/insight", 
	]

resolver = "2"

[profile.release]
codegen-units = 1
lto = true
