[package]
name = "rsnano_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
rsnano_nullable_http_client = { path = "../nullables/http_client" }
rsnano_core = { path = "../core" }
rsnano_stats = { path = "../stats" }
rsnano_node = { path = "../node" }
rsnano_rpc_server = { path = "../rpc_server" }
rsnano_websocket_server = { path = "../websocket_server" }
anyhow = "1"
tokio = { version = "1", features = ["signal"] }
tracing = "0"
