[package]
name = "rsnano_websocket_client"
version = "0.1.0"
edition = "2024"

[dependencies]
rsnano_core = { path = "../core" }
rsnano_websocket_messages = { path = "../websocket_messages" }
tokio-tungstenite = "0"
tokio = { version = "1", features = [
    "net",
] }
futures-util = { version = "0", features = ["sink"] }
serde = "1"
serde_json = "1"
