[package]
name = "nanospam"
version = "0.1.0"
edition = "2024"

[dependencies]
rsnano_core = { path = "../../core" }
rsnano_messages = { path = "../../messages" }
rsnano_network = { path = "../../network" }
rsnano_network_protocol = { path = "../../network_protocol" }
rsnano_nullable_clock = { path = "../../nullables/clock" }
rsnano_nullable_tcp = { path = "../../nullables/tcp" }
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["macros", "rt", "net", "io-util"] }
